--- a/src/app/components/retail/retail.component.html
+++ b/src/app/components/retail/retail.component.html
@@ -1,3 +1,7 @@
-<app-carousel></app-carousel>
-<app-recommended></app-recommended>
-<app-products></app-products>
+<div class="container-fluid">
+  <div class="row">
+    <app-carousel></app-carousel>
+    <app-recommended></app-recommended>
+    <app-products></app-products>
+  </div>
+</div>
