--- a/src/app/components/recommended/recommended.component.html
+++ b/src/app/components/recommended/recommended.component.html
@@ -1,1 +1,85 @@
 <p>recommended works!</p>
+<div class="mt-2 pt-4">
+  <h4 class="w-100 text-center mb-0">Recommended Products</h4>
+  <div class="text-center pb-3">
+    <div style="width: 30%; position: absolute; left: 35%">
+      <hr />
+    </div>
+    <img
+      src="assets/images/qappu-line-image-2.png"
+      style="position: absolute; left: 45%; width: 7rem; padding-top: 0.5rem"
+      alt=""
+    />
+  </div>
+  <div tuiCarouselButtons class="wrapper mt-4 pb-3">
+    <button
+      tuiIconButton
+      icon="tuiIconChevronLeftLarge"
+      title="Previous"
+      (click)="carousel.prev()"
+    ></button>
+    <div class="row w-100">
+      <div
+        class="col me-2"
+        style="min-height: 7.65rem; background-color: #d4ebff !important"
+      ></div>
+      <div
+        class="col me-2"
+        style="min-height: 7.65rem; background-color: #d4ebff !important"
+      ></div>
+      <div
+        class="col me-2"
+        style="min-height: 7.65rem; background-color: #d4ebff !important"
+      ></div>
+      <div
+        class="col me-2"
+        style="min-height: 7.65rem; background-color: #d4ebff !important"
+      ></div>
+    </div>
+    <tui-carousel #carousel [draggable]="true">
+      <ng-container>
+        <div *tuiItem class="item card" style="min-height: 6.65rem">
+          <div class="d-flex align-items-center">
+            <img
+              src="https://images.unsplash.com/photo-1560343090-f0409e92791a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
+              style="height: 4rem; width: auto"
+              alt="good"
+            />
+            <div class="ms-2">
+              <p class="mb-1">recomp.name</p>
+              <h6>Kes - recomp.mode_price</h6>
+              <div class="mx-3 mb-1 d-flex justify-content-between">
+                <tui-tag
+                  status="primary"
+                  class="tag_entries"
+                  [hoverable]="true"
+                  tuiDescribedBy="entries"
+                  tuiHintId="love"
+                  tuiHintDirection="top-left"
+                  [tuiHint]="'Total entries for this product'"
+                ></tui-tag>
+
+                <tui-tag
+                  status="primary"
+                  class="tag_collectors"
+                  [hoverable]="true"
+                  tuiDescribedBy="collectors"
+                  tuiHintId="love"
+                  tuiHintDirection="top-right"
+                  [tuiHint]="'Unique Collectors'"
+                ></tui-tag>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-container>
+    </tui-carousel>
+
+    <button
+      tuiIconButton
+      icon="tuiIconChevronRightLarge"
+      title="Next"
+      (click)="carousel.next()"
+    ></button>
+  </div>
+</div>
