--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #46aa4a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.button-class {
+  background-color: #46aa4a;
+}
+
+.form-check-input:checked {
+  background-color: #46aa4a;
+  border-color: #46aa4a;
+}
